--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -7,7 +7,7 @@
         </script>
  
 <p id="notice"><%= notice %></p>
-
+<div class="container">
 <%= form_tag transactions_path do%>
   
   <%= form_for(@transaction) do |f| %>  
@@ -46,5 +46,5 @@
 
 <%end%>
 
-
+</div>
 
